force-app/main/default/objects/THOR_Applicant_Bearer__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_ID__c</fullName>
        <label>Applicant ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Applicant Bearer</relationshipLabel>
        <relationshipName>Applicant_Bearer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <label>Person Responsible</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Applicant Bearer</label>
    <nameField>
        <label>Applicant Bearer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>